--- a/FaveLyrics/Base.lproj/Main.storyboard
+++ b/FaveLyrics/Base.lproj/Main.storyboard
@@ -577,6 +577,7 @@ back to menu</string>
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="fNX-0p-ipT" id="en8-UC-b5K"/>
+                        <outlet property="emptyHeart" destination="S0z-2R-i3h" id="mFN-OC-AKp"/>
                         <outlet property="favoriteButton" destination="Oao-Qv-6qV" id="Oal-Lt-3gz"/>
                         <outlet property="footerView" destination="auJ-ma-QNr" id="Inz-uE-Zgv"/>
                         <outlet property="fullHeartImage" destination="EYA-zn-b8x" id="ikp-SF-Oh4"/>
